Holy crap I wrote a book
Now to edit it into something not awful...

--- a/back.tex
+++ b/back.tex
@@ -1,4 +1,4 @@
-\setlength\parskip{0.75\baselineskip}
+\setlength\parskip{0.8\baselineskip}
 \setlength\parindent{0pt}
 
 \chapter{Additional Resources}
@@ -27,8 +27,9 @@ The Share\LaTeX{} knowledge base, at \url{https://www.sharelatex.com/learn}
 
 \section{For typography}
 
-We've also spent very little time here discussing how you \emph{should} use
-\LaTeX{} to create quality typography.
+We've spent most of our time here focusing on questions of \emph{what}
+you can do with \LaTeX,
+and little on \emph{how} you should use it to create quality typography.
 Read on:
 
 \begin{adjustwidth}{1.5em}{0pt}
