--- a/history.tex
+++ b/history.tex
@@ -42,13 +42,13 @@ of all time.
 For years, he paused all work on his books to create his own
 digital typesetting system.
 When the dust settled in 1978, Knuth had the first version of
-\TeX.\punckern\footnote{\TeX\ is pronounced like the first syllable of
+\TeX.\punckern\footnote{\TeX{} is pronounced like the first syllable of
 ``\textbf{tech}nician''\quotekern. It is short for the Greek
 {\fontspec[Scale=MatchLowercase]{NotoSerif-Regular}τέχνη},
 meaning \introduce{art} or \introduce{craft}.\endnote{Knuth,
 \textit{The \TeX book}, 1}}
 
-It's hard to appreciate how much of a revolution \TeX\ was,
+It's hard to appreciate how much of a revolution \TeX{} was,
 especially looking back from a time where anybody with a copy
 of Word can be their own desktop publisher.
 Adobe's \acronym{pdf} wouldn't exist for another decade, so Knuth
@@ -56,10 +56,10 @@ invented a device-independent format, \acronym{dvi}.
 Scalable fonts were uncommon at the time, so Knuth created a system,
 \MF, to rasterize his characters into dots on the
 page.\punckern\footnote{In some ways,
-\MF\ is more impressive than the PostScript system that
+\MF{} is more impressive than the PostScript system that
 underpins modern TrueType and OpenType font files.
 Instead of constructing characters from lines and curves,
-\MF\ uses strokes of virtual pens.
+\MF{} uses strokes of virtual pens.
 By tweaking the parameters of these pens and strokes, one can build entire
 font families from the same base designs.}
 Perhaps most importantly, Knuth and his graduate students designed algorithms
