--- a/international.tex
+++ b/international.tex
@@ -1,4 +1,5 @@
 \chapter{Typographie Internationale}
+\label{i18n}
 
 Surprisingly, many languages besides English exist.
 You may want to write with them.
