--- a/micro.tex
+++ b/micro.tex
@@ -1,9 +1,10 @@
 \chapter{Microtypography}
 
 \introduce{Microtypography} is the use of small, subliminal tweaks to improve
-a document's legibility, or:
+a document's legibility.
+In other words,
 \begin{quote}
-[\ldots]the art of enhancing the appearance and readability of a
+Micro-typography is the art of enhancing the appearance and readability of a
 document while exhibiting a minimum degree of visual obtrusion.
 It is concerned with what happens between or at the margins of characters,
 words or lines. Whereas the macro-typographical aspects of a document
