--- a/installation.tex
+++ b/installation.tex
@@ -26,11 +26,11 @@ Each major operating system has its own \LaTeX{} distribution:
     packages if your document uses one that isn't currently on your computer.
 
 \item[Linux and BSD] usually use \TeX{} Live.
-    Like most software, this is usually provided through your
-    \acronym{os}'s package manager (e.g., Apt, RPM, Pacman, Zypper, etc.).
+    Like most software, this is often provided through your
+    \acronym{os}'s package manager.
     Use yours to install \monobox{texlive-core},
     \monobox{texlive-luatex} and \monobox{texlive-xetex}.\punckern\footnote{%
-    Some distributions (like Arch) package all three into a
+    Some Linux distributions (like Arch) package all three into a
     single \monobox{texlive-core} package.}
     As you work with \LaTeX, you may need less-common packages,
     which are usually found in distro packages with names like
