--- a/latex-book.tex
+++ b/latex-book.tex
@@ -323,7 +323,7 @@ by \runauthor
 
 This book is licensed under the \\
 Creative Commons Attribution-ShareAlike~4.0 International License. \\
-The full text of the license is available at \\
+Its full text is available at \\
 \url{https://creativecommons.org/licenses/by-sa/4.0/legalcode}
 }
 \clearpage
