--- a/textformatting.tex
+++ b/textformatting.tex
@@ -3,8 +3,8 @@
 
 \section{Emphasis}
 
-Occasionally your writing needs some extra punch to get its point across.
-\LaTeX{} lets you emphasize text with the \verb|\emph| command.
+Writing sometimes needs some extra punch to get its point across.
+\LaTeX{} provides emphasis with the \verb|\emph| command.
 By default, this \emph{italicizes} its argument:
 \begin{leftfigure}
 \begin{lstlisting}
@@ -25,9 +25,9 @@ with
 We can use \textbf{boldface} or \textsc{small caps} as well.
 \end{lstlisting}
 \end{leftfigure}
-Be judicious in your use of emphasis, especially boldface,
-which excels at drawing the reader's attention away from everything around it.
-Too much is distracting.
+Be judicious in your use of emphasis, especially boldface.
+It excels at drawing the reader's attention away from everything around it,
+so too much is distracting.
 
 \section{Meeting the whole (type) family}
 
