Hello, Garamond Premier

--- a/back.tex
+++ b/back.tex
@@ -60,14 +60,11 @@ Available (for free!) at \url{https://practicaltypography.com}
 % From https://tex.stackexchange.com/a/24068/92465
 {\let\cleardoublepage\clearpage \chapter{Colophon}}
 
-This guide was typeset using \LuaLaTeX{} in Adobe Garamond Pro by
-Robert Slimbach.
-His revival is based on the Roman type of
-the \otford{16}{th} century French
+This guide was typeset with \LuaLaTeX{} in Garamond Premier by Robert Slimbach.
+His revival is based on Roman type by
+\otford{16}{th} century French
 punchcutter Claude Garamond.
-Italics are inspired by work of Garamod's contemporary Robert Granjon.
-A few glyphs---such as the historical long s---were borrowed from
-Georg Duffner's EB~Garamond.
+Italics are inspired by the work of Garamod's contemporary Robert Granjon.
 
 Monospaced items are set in Matthias Tellen's
 \href{https://madmalik.github.io/mononoki/}{\texttt{mononoki}},
