--- a/fonts.tex
+++ b/fonts.tex
@@ -204,8 +204,7 @@ OpenType groups ligatures into three categories:
     but can be enabled with
     \verb|Ligatures=Discretionary|.
 \item[Historical] ligatures are ones which have fallen out of common use,
-    such as those with a \introduce{long~s} (e.g.,
-    {\fontspec[Scale=MatchLowercase, Ligatures={TeX,Historic}]{EB Garamond}ſt}).
+    such as those with a \introduce{long~s} (e.g., ſt).
     These are also disabled by default
     but can be enabled with \verb|Ligatures=Historic|.
 \end{description}
