--- a/history.tex
+++ b/history.tex
@@ -45,7 +45,7 @@ When the dust settled in 1978, Knuth had the first version of
 \TeX.\punckern\footnote{\TeX{} is pronounced like the first syllable of
 ``\textbf{tech}nician''\quotekern. It is short for the Greek
 {\fontspec[Scale=MatchLowercase]{NotoSerif-Regular}τέχνη},
-meaning \introduce{art} or \introduce{craft}.\endnote{Knuth,
+for \introduce{art} or \introduce{craft}.\endnote{Knuth,
 \textit{The \TeX book}, 1}}
 
 It's hard to appreciate how much of a revolution \TeX{} was,
@@ -100,10 +100,10 @@ The most recent version, 3.14159265, came out in January~2014.
     and TrueType fonts,
     and micro-typographic features discussed in this book's Microtype chapter.
     It was originally developed by
-    \htt{}
+    Hàn Thế Thành
     as part of his PhD thesis
     for Masaryk University in Brno, Czech Republic.\punckern\endnote{%
-    \htt,
+    Hàn Thế Thành,
     \textit{Micro-typographic extensions to the \TeX{} typesetting system}
     (Masaryk University Brno, October 2000)}
 
