--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -153,7 +153,7 @@ gives us
 \section{Columns}
 
 We often split documents---or parts of them---into multiple columns.
-This is especially common when printing on \acronym{a4} or \acronym{us} letter
+This is especially common when printing on \textsc{a4} or \acronym{us} letter
 paper, since it allows a much more comfortable line widths at standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
 on where you look, but a general rule of thumb is to choose layouts that give
