--- a/textformatting.tex
+++ b/textformatting.tex
@@ -53,7 +53,7 @@ Command & ``Switch'' version & Style \\
 The command forms (which take the text to format as an argument)
 should usually be preferred over the switch versions
 (which affect the group in which they are issued)
-because the former automatically handle any
+since the former automatically handles any
 spacing corrections needed around them.\punckern\footnote{For example,
 \textit{italicized text} amidst upright text should be followed
 by a slight amount of extra space, called an ``italic correction''\quotekern.}
